Correct gap between columns

--- a/style.css
+++ b/style.css
@@ -88,7 +88,7 @@ header .container .row h2 a{
 	gap: .75em;
 }
 
-.wp-container-37 {
+.wp-container-30 {
 	gap: 0!important;
 }
 
